--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>assignment_module2</title>
 </head>
 <body>
-<link rel="stylesheet" href="cssfile.css">
+<link rel="stylesheet" href="cssfile1.css">
 <h1>Our Menu</h1>
 <section class="sec col-lg-6" id="l">
 <h2 id="chicken">Chicken</h2>
